force-app/main/default/objects/CTRMasterData__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APPLICATION</fullName>
                </value>
                <value>
                    <fullName>CUSTOMER_GROUP</fullName>
                    <label>CUSTOMER GROUP</label>
                </value>
                <value>
                    <fullName>CUSTOMER_TYPE</fullName>
                    <label>CUSTOMER TYPE</label>
                </value>
                <value>
                    <fullName>INTER_GROUP</fullName>
                    <label>INTER GROUP</label>
                </value>
                <value>
                    <fullName>INDUSTRY</fullName>
                </value>
                <value>
                    <fullName>SUB_INDUSTRY</fullName>
                    <label>SUB INDUSTRY</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CTR Master Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>INTER_GROUP</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CTRMasterData Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>